--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -39,10 +39,14 @@
                         <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                       </span>
                     </div>
+                    <p class="imagem__texto">{{ fotografia.descricao }}</p>
                   </div>
                 </li>
               {% endfor %}
             {% else %}
+            <div class="imagem__texto">
+              <p>Fotografias não encontradas</p>
+            </div>
             {% endif %}                        
           </ul>
         </div>
